# 3D-geometry

./: .gitignore  README.md  TheoryExercise.txt  readme.txt
Ex3/: CMakeCache.txt  cmake_install.cmake  dgp2016-exercise3.cbp  readme.txt
Ex3/nanogui/: NanoGUI.cbp  bin2c.ilk  cmake_install.cmake
Ex3/nanogui/ext_build/glfw/: GLFW.cbp  cmake_install.cmake
Ex3/nanogui/ext_build/glfw/src/: cmake_install.cmake  glfw3.lib  glfw3.pc
Ex3/surfaces/: cmake_install.cmake
Ex4/: readme.txt
Ex4/images/image 1/: image1.psd
Ex5/: readme.txt
Ex6/: mesh_processing.cpp  readme.txt
Project/: 3d-project-ideas.txt  IDEA_1st_deliverable.txt  preprocessing_on_geralt.txt  processing_ideas.txt
Project/code/3d_project/data/: geralt.off  geralt_no_hair.off
Project/code/3d_project/remeshing/: main.cpp  mesh_processing.cpp  mesh_processing.h  viewer.cpp  viewer.h
Project/latex paper/: latex_1st_deliverable.aux  latex_1st_deliverable.blg  latex_1st_deliverable.out  latex_1st_deliverable.tex
dgp2016-exercise2/: CMakeLists.txt
dgp2016-exercise2/cmake/: ConfigureGLEW.cmake  FindGLEW.cmake  FindGLFW3.cmake  FindOpenGP.cmake
dgp2016-exercise2/curves/: CMakeLists.txt  curves.cpp  reconstruction.cpp
dgp2016-exercise3/: CMakeLists.txt
dgp2016-exercise3/surfaces/: surfaces.cpp  trackball.h  viewer.h
dgp2016-exercise4/curvature/: viewer.cpp  viewer.h
dgp2016-exercise5/: CMakeLists.txt
dgp2016-exercise5/implicit_fairing/: mesh_processing.cpp  mesh_processing.h  viewer.cpp  viewer.h
dgp2016-exercise6/remeshing/: mesh_processing.cpp  mesh_processing.h  viewer.cpp
